--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=123456
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #全局设置主键生成策略
 mybatis-plus.global-config.db-config.id-type=auto
+
+mybatis-plus.mapper-locations=classpath:xml/*.xml
