--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 应用名称
 spring.application.name=mybatis-plus
-
+server.port=8888
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/MyBatis?serverTimezone=GMT%2B8&characterEncoding=utf-8
 spring.datasource.username=root
